--- a/res/xml/widget_config.xml
+++ b/res/xml/widget_config.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/widget"
-    android:minHeight="160dp"
-    android:minWidth="250dp"
-    android:updatePeriodMillis="8640000" 
-    android:resizeMode="horizontal|vertical">
+    android:minHeight="200dp"
+    android:minWidth="300dp"
+    android:updatePeriodMillis="60000" >
 
 </appwidget-provider>
